tests/ui/system_time.stderr
error: nondeterministic workflow API detected; use durust::now instead
 --> tests/ui/system_time.rs:5:10
  |
5 | async fn bad(_: BadInput) -> durust::Result<()> {
  |          ^^^
